examples/type_system/failing/99_multi_error_continuation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// PASS 2 multi-error continuation: independent errors in one function body.
fn bad() -> Unit {
    let x = 1
    x = 2
    let y: Int = "oops"
}

fn main() -> Unit {
    bad()
}
